# rickettsia_sonora

./: README.md  pyproject.toml  requirements.txt
docs/: catalogo_serv_atencion.csv  diccionario_variables.csv
notebooks/: 1.0-eot-ETL.ipynb  2.0-eot-EDA.ipynb  2.1-eot-EDA.ipynb  2.1-eot-EDA_PCA.ipynb  2.2-macl-EDA.ipynb  3.0-eot-LogReg.ipynb  3.0-macl-model.ipynb  3.1-odsb-model.ipynb  4.0-eot-model.ipynb
references/: catalogo(Catalogo especie).csv  catalogo.xlsx  diccionario_rick_eda_imput.csv  diccionario_rick_eda_imput.md  diccionario_ricket_1.csv  diccionario_ricket_1.md
reports/: reporte_resultados.md
rickettsia_sonora/: LICENSE  Makefile  pyproject.toml
src/data/: make_dataset.py  make_processed_dataset.py  run_pipeline.py
